--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -16,17 +16,18 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     steps:
-      -name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-        name: Setup Nodejs
+      - name: Setup Nodejs
         uses: actions/setup-node@v2
         with:
-          node-version: 17
+          node-version: 14
           cache: 'npm'
           cache-dependecy-path: /.api/package-lock.js
-      -name: install
+      - name: install
         shell: bash
         run: npm ci
-      -name: run unit test
+      - name: run unit test
         shell: bash
         run: npm run test
+
