--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,5 +1,5 @@
 name: API CI
-#on: [push]
+#on: [push] ffff
 on:
   push:
       - "./api/**"
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 14
           cache: 'npm'
-          cache-dependency-path: /.api/package-lock.json
+          cache-dependency-path: ./api/package-lock.json
       - name: install
         shell: bash
         run: npm ci
